unpackaged/main/default/objects/Case/fields/AccountBillingCity__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingCity__c</fullName>
    <description>Temp DocuSign</description>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing City</label>
    <type>Text</type>
</CustomField>