unpackaged/main/default/objects/Case/fields/AccountBillingState__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingState__c</fullName>
    <description>Temp DocuSign</description>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>