unpackaged/main/default/objects/Case/fields/AccountBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingStreet__c</fullName>
    <description>Temp DocuSign</description>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Street</label>
    <type>Text</type>
</CustomField>