unpackaged/main/default/objects/Case/fields/AccountBillingZip__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingZip__c</fullName>
    <description>Temp DocuSign</description>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Zip</label>
    <type>Text</type>
</CustomField>