unpackaged/main/default/objects/Case/fields/AccountP21ID__c.field-meta.xml
<CustomField>
    <fullName>AccountP21ID__c</fullName>
    <description>Temp Fix For DocuSign</description>
    <formula>Account.CID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account P21 ID</label>
    <type>Text</type>
</CustomField>