unpackaged/main/default/objects/Case/fields/ADC_Account__c.field-meta.xml
<CustomField>
    <fullName>ADC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADC Account, is blank when number of Related Accounts of the Contact is greater than 1</description>
    <label>ADC Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>