unpackaged/main/default/objects/Case/fields/ADC_Age_of_Case_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>ADC_Age_of_Case_in_Hours__c</fullName>
    <description>Calculates Age of All Cases, If closed Closed Date - CreateDate, If Open Now() - CreateDate. This formula excludes in non ADC business hours and weekends.</description>
    <formula>If(ISBLANK(ClosedDate),
9 * (
( 5 * FLOOR( ( DATEVALUE( Now() ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Now() ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Now() - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
)
)
),
9 * (
( 5 * FLOOR( ( DATEVALUE( ClosedDate) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( ClosedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADC Age of Case in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>