unpackaged/main/default/objects/Case/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes fo the Product Launch Case</description>
    <label>Additional Notes/URL</label>
    <type>TextArea</type>
</CustomField>