unpackaged/main/default/objects/Case/fields/Agency_Approval_BE_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Approval_BE_Information__c</fullName>
    <defaultValue>&quot;• Searching BE Cases, Knowledge Articles, Problem Reports and ECNs for information&quot; +BR()
&amp;&quot;• Part Number&quot; +BR()
&amp;&quot;• Type of query: listed in Issue Type&quot; +BR()
&amp;&quot;• Agency Type&quot; +BR()
&amp;&quot;• Check the Agency website.  Many answers can be found by entering in the UL number&quot;</defaultValue>
    <label>Agency Approval BE Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>