unpackaged/main/default/objects/Case/fields/Agency_Approval_Case__c.field-meta.xml
<CustomField>
    <fullName>Agency_Approval_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Case is an Agency Approval. Used in Create BE Escalation from Case flow.</description>
    <label>Agency Approval Case</label>
    <type>Checkbox</type>
</CustomField>