unpackaged/main/default/objects/Case/fields/All_BE_Fields_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>All_BE_Fields_Filled_Out__c</fullName>
    <description>This formula field is used to validate data before user submits the BE Case. Referenced in the Backline Escalation Case cloud flow.</description>
    <formula>IF(
  OR(
  AND(
    CONTAINS(RecordType.Name, &quot;Backline&quot;),
    OR(
     ISBLANK( Subject ),
     ISNULL( Part_Number__c ),
     ISPICKVAL(Silo__c, &quot;&quot;), 
     ISNULL( Issue_Type__c )
    )
  )
)
,FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All BE Fields Filled Out</label>
    <type>Checkbox</type>
</CustomField>