unpackaged/main/default/objects/Case/fields/BE_Case_formula__c.field-meta.xml
<CustomField>
    <fullName>BE_Case_formula__c</fullName>
    <description>Formula field that determines whether a Record Type is a Backline Escalation Case. Used in a cloud flow to send out notifications for Chatter Posts.</description>
    <formula>CONTAINS(RecordType.Name,&quot;Backline&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BE Case formula</label>
    <type>Checkbox</type>
</CustomField>