unpackaged/main/default/objects/Case/fields/BusiDevVolCust__c.field-meta.xml
<CustomField>
    <fullName>BusiDevVolCust__c</fullName>
    <label>Send BusiDevVolCust Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>