unpackaged/main/default/objects/Case/fields/Candidate_for_Knowledge_Review__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Knowledge_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a case should be a candidate for Knowledge review.</description>
    <label>Candidate for Knowledge Review</label>
    <type>Checkbox</type>
</CustomField>