unpackaged/main/default/objects/Case/fields/Case_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Profile__c</fullName>
    <description>Case Owner&#39;s profile. Used in &quot;Populate CRA Field&quot; Process Builder and used for reporting.</description>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Profile</label>
    <type>Text</type>
</CustomField>