unpackaged/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Application Presales</fullName>
                <label>Presales - Application</label>
            </value>
            <value>
                <fullName>Presales - Out of Stock</fullName>
            </value>
            <value>
                <fullName>Presales - Insufficient data for selection</fullName>
            </value>
            <value>
                <fullName>Application Help</fullName>
            </value>
            <value>
                <fullName>Agency Approvals</fullName>
            </value>
            <value>
                <fullName>Bad Traffic</fullName>
            </value>
            <value>
                <fullName>Bezel Problem</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>CAD Drawings</fullName>
            </value>
            <value>
                <fullName>Catastrophic Failure</fullName>
            </value>
            <value>
                <fullName>Communications Failure</fullName>
            </value>
            <value>
                <fullName>Contrast Problem</fullName>
            </value>
            <value>
                <fullName>Customer Caused</fullName>
            </value>
            <value>
                <fullName>Customer Recommendation</fullName>
            </value>
            <value>
                <fullName>Defective Product</fullName>
            </value>
            <value>
                <fullName>Display Problem</fullName>
            </value>
            <value>
                <fullName>Documentation sufficient to prevent call</fullName>
            </value>
            <value>
                <fullName>Firmware Problem</fullName>
            </value>
            <value>
                <fullName>Ground Fault</fullName>
            </value>
            <value>
                <fullName>Hardware Upgrade</fullName>
            </value>
            <value>
                <fullName>Incorrect Documentation</fullName>
            </value>
            <value>
                <fullName>Installation Instructions</fullName>
            </value>
            <value>
                <fullName>Made Recommendation</fullName>
            </value>
            <value>
                <fullName>No Output Power</fullName>
            </value>
            <value>
                <fullName>No Response from Customer</fullName>
            </value>
            <value>
                <fullName>No Speed Control</fullName>
            </value>
            <value>
                <fullName>Old Hardware</fullName>
            </value>
            <value>
                <fullName>Old Software Version</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>