unpackaged/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Used in the Community to identify address of Community User.</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>