unpackaged/main/default/objects/Case/fields/Connected_PLC__c.field-meta.xml
<CustomField>
    <fullName>Connected_PLC__c</fullName>
    <description>Connected PLC</description>
    <label>Connected PLC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allen Bradley</fullName>
            </value>
            <value>
                <fullName>CLICK</fullName>
            </value>
            <value>
                <fullName>DirectLogic</fullName>
            </value>
            <value>
                <fullName>Do-more</fullName>
            </value>
            <value>
                <fullName>Entivity</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>GS Drives</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Modbus General</fullName>
            </value>
            <value>
                <fullName>Omron</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Productivity Series</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>