unpackaged/main/default/objects/Case/fields/Contact_Acknowledgment_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Acknowledgment_Email__c</fullName>
    <formula>Contact.Acknowledgment_Email__c</formula>
    <label>Contact Acknowledgment Email</label>
    <type>Text</type>
</CustomField>