unpackaged/main/default/objects/Case/fields/Contact_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Direct_Phone__c</fullName>
    <formula>IF(
ISBLANK(Contact.Direct_Phone__c),
NULL,
&quot;(&quot;&amp;
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Direct_Phone__c, &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),1,3)&amp;
&quot;) &quot;&amp;
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Direct_Phone__c , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),4,3)&amp;
&quot;-&quot;&amp;
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Direct_Phone__c , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),7,4)
)</formula>
    <label>Contact Direct Phone</label>
    <type>Text</type>
</CustomField>