unpackaged/main/default/objects/Case/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Contact.P21_ID__c</formula>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>