unpackaged/main/default/objects/Case/fields/Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Verified__c</fullName>
    <formula>Contact.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Verified</label>
    <type>Checkbox</type>
</CustomField>