unpackaged/main/default/objects/Case/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&#39;United States&#39;</defaultValue>
    <description>Used in the Community to identify address of Community User.</description>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>