unpackaged/main/default/objects/Case/fields/CRA__c.field-meta.xml
<CustomField>
    <fullName>CRA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRA who handled the case. Populated with a Process Builder flow and used for reporting.</description>
    <label>CRA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>