unpackaged/main/default/objects/Case/fields/CreditAppStatusInProcess__c.field-meta.xml
<CustomField>
    <fullName>CreditAppStatusInProcess__c</fullName>
    <label>Credit App Status In Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>References – 1st request</fullName>
            </value>
            <value>
                <fullName>References – 2nd request</fullName>
            </value>
            <value>
                <fullName>References – 3rd request</fullName>
            </value>
            <value>
                <fullName>Requested GOA</fullName>
            </value>
            <value>
                <fullName>Requested Additional Refs</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>