unpackaged/main/default/objects/Case/fields/Customer_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Flagged__c</fullName>
    <description>If Account or Contact is flagged, then the Case will be flagged, too.</description>
    <formula>IF(
   
    Contact.Flag_Customer__c = TRUE
    ,
    IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0686A000006R7kI&amp;operationContext=CHATTER&amp;contentId=05T6A00000M7ND5&quot;, &quot;&quot;, 20, 20), 
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Flagged</label>
    <type>Text</type>
</CustomField>