unpackaged/main/default/objects/Case/fields/Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Date_Code__c</fullName>
    <description>Date Code</description>
    <label>Date Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>