unpackaged/main/default/objects/Case/fields/Define_Error_Issue__c.field-meta.xml
<CustomField>
    <fullName>Define_Error_Issue__c</fullName>
    <label>Define Error/Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Facets</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Harmonization Code</fullName>
            </value>
            <value>
                <fullName>Image(s)</fullName>
            </value>
            <value>
                <fullName>In Depth</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Made in USA</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Media Gallery</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Recommended Item(s)</fullName>
            </value>
            <value>
                <fullName>Shipping Weight</fullName>
            </value>
            <value>
                <fullName>Spec</fullName>
            </value>
            <value>
                <fullName>Spec Table</fullName>
            </value>
            <value>
                <fullName>WITB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>