unpackaged/main/default/objects/Case/fields/Delete_Case__c.field-meta.xml
<CustomField>
    <fullName>Delete_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by a Case workflow to flag an Unconfirmed Email if it has not received a response in 7 days. This will trigger a Process Builder to delete the record.</description>
    <label>Delete Case</label>
    <type>Checkbox</type>
</CustomField>