unpackaged/main/default/objects/Case/fields/Drives_Motion_BE_Case_Information__c.field-meta.xml
<CustomField>
    <fullName>Drives_Motion_BE_Case_Information__c</fullName>
    <defaultValue>&quot;• Searching BE Cases, Knowledge Articles, Problem Reports and ECNs for information&quot; +BR()
&amp;&quot;• Part Number&quot; +BR()
&amp;&quot;• Detailed description of issue&quot; +BR()
&amp;&quot;• Software and Firmware version numbers&quot; +BR()
&amp;&quot;• Windows Version&quot; +BR()
&amp;&quot;• Error Code(s)&quot; +BR()
&amp;&quot;• Get Drive/Servo configuration&quot; +BR()
&amp;&quot;• Are Line reactors installed and where?&quot; +BR()
&amp;&quot;• What is the motor orientation?&quot; +BR()
&amp;&quot;• Try simple test project&quot; +BR()
&amp;&quot;• Have you duplicated problem?&quot; +BR()
&amp;&quot;• Ask other Techs and Tech Lead first&quot;</defaultValue>
    <label>Drives &amp; Motion BE Case Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>