unpackaged/main/default/objects/Case/fields/Email_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Email_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Email has an Attachment</description>
    <label>Email Attachment</label>
    <type>Checkbox</type>
</CustomField>