unpackaged/main/default/objects/Case/fields/Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Formula__c</fullName>
    <description>Contact Email. Used in Email Templates.</description>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Formula</label>
    <type>Text</type>
</CustomField>