unpackaged/main/default/objects/Case/fields/Email_Sent_to_The_Phish__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_The_Phish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to The Phish</label>
    <type>Checkbox</type>
</CustomField>