unpackaged/main/default/objects/Case/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Error Code</description>
    <label>Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>