unpackaged/main/default/objects/Case/fields/Esker_Account__c.field-meta.xml
<CustomField>
    <fullName>Esker_Account__c</fullName>
    <formula>Account.Esker_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esker Account</label>
    <type>Checkbox</type>
</CustomField>