unpackaged/main/default/objects/Case/fields/Feed_Body__c.field-meta.xml
<CustomField>
    <fullName>Feed_Body__c</fullName>
    <label>Feed Body</label>
    <type>TextArea</type>
</CustomField>