unpackaged/main/default/objects/Case/fields/Feed_Body_Post__c.field-meta.xml
<CustomField>
    <fullName>Feed_Body_Post__c</fullName>
    <label>Feed Body Post</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>