unpackaged/main/default/objects/Case/fields/Feed_Body_Post_b__c.field-meta.xml
<CustomField>
    <fullName>Feed_Body_Post_b__c</fullName>
    <label>Feed Body Post b</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>