unpackaged/main/default/objects/Case/fields/Feed_Body_Post_Community_Rich__c.field-meta.xml
<CustomField>
    <fullName>Feed_Body_Post_Community_Rich__c</fullName>
    <label>Feed Body Post Community Rich</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>