unpackaged/main/default/objects/Case/fields/FeedBodyPostMain__c.field-meta.xml
<CustomField>
    <fullName>FeedBodyPostMain__c</fullName>
    <description>This is for Parent Case Chatter Feed Process</description>
    <label>Feed Body Post Main</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>