unpackaged/main/default/objects/Case/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <description>Firmware Version</description>
    <label>Firmware Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>