unpackaged/main/default/objects/Case/fields/Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason__c</fullName>
    <formula>If(Contact.Flag_Customer__c = True,  Text(Contact.Flag_Reason__c) , &#39;&#39;)</formula>
    <label>Flag Reason</label>
    <type>Text</type>
</CustomField>