unpackaged/main/default/objects/Case/fields/Forward_to_Supplier_Payments__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_Supplier_Payments__c</fullName>
    <label>Forward to Supplier Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>