unpackaged/main/default/objects/Case/fields/Future_Testing_Site__c.field-meta.xml
<CustomField>
    <fullName>Future_Testing_Site__c</fullName>
    <formula>HYPERLINK(&quot;https://future.automationdirect.com/adc/home/home&quot;, &quot;Future Testing Site&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Testing Site</label>
    <type>Text</type>
</CustomField>