unpackaged/main/default/objects/Case/fields/HMI_BE_Case_Information__c.field-meta.xml
<CustomField>
    <fullName>HMI_BE_Case_Information__c</fullName>
    <defaultValue>&quot;• Searching BE Cases, Knowledge Articles, Problem Reports and ECNs for information&quot; +BR()
&amp;&quot;• Part Number&quot; +BR()
&amp;&quot;• Detailed description of issue&quot; +BR()
&amp;&quot;• Software and Firmware version numbers&quot; +BR()
&amp;&quot;• Type of network/protocol (Ethernet, RS-485, EtherNet/IP, Modbus, etc…)&quot; +BR()
&amp;&quot;• Obtain network topology diagram: even if simple hand drawing&quot; +BR()
&amp;&quot;• Error Code and Error History&quot; +BR()
&amp;&quot;• HMI project AND PLC project&quot; +BR()
&amp;&quot;• Simple project test: 1 Numeric Display addressed to first and most common PLC address&quot; +BR()
&amp;&quot;• Try Simulator with HMI&quot; +BR()
&amp;&quot;• Have you duplicated problem?&quot; +BR()
&amp;&quot;• Ask other Techs and Tech Lead first&quot;</defaultValue>
    <label>HMI BE Case Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>