unpackaged/main/default/objects/Case/fields/I_need_help_with__c.field-meta.xml
<CustomField>
    <fullName>I_need_help_with__c</fullName>
    <label>I need help with...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>an existing or new order</fullName>
            </value>
            <value>
                <fullName>a billing question</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>