unpackaged/main/default/objects/Case/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Identifier field for Teamers to indicate Order Number or Certificate Number, etch</description>
    <label>Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>