unpackaged/main/default/objects/Case/fields/ImportantContent__c.field-meta.xml
<CustomField>
    <fullName>ImportantContent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The intent is for a Tech to select this field when the case is relevant to document creation</description>
    <inlineHelpText>The intent is for a Tech to select this field when the case is relevant to document creation</inlineHelpText>
    <label>Important Content</label>
    <type>Checkbox</type>
</CustomField>