unpackaged/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Issue Type</description>
    <label>Issue Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CE Declaration of Conformity</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Country of Origin</fullName>
            </value>
            <value>
                <fullName>Defect/Damage</fullName>
            </value>
            <value>
                <fullName>European Directives</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Harmonizing Codes</fullName>
            </value>
            <value>
                <fullName>High Speed IO</fullName>
            </value>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>Keypad</fullName>
            </value>
            <value>
                <fullName>Labeling/Packaging</fullName>
            </value>
            <value>
                <fullName>Ladder Programming</fullName>
            </value>
            <value>
                <fullName>Mechanical/Dimensional</fullName>
            </value>
            <value>
                <fullName>Multiple Listing - UL/CSA</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parameter</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Specifications/Drawings</fullName>
            </value>
            <value>
                <fullName>Test Standards</fullName>
            </value>
            <value>
                <fullName>Wiring/Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>