unpackaged/main/default/objects/Case/fields/Last_Modified_Date_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_for_Flow__c</fullName>
    <description>This field is populated by workflow and is used to trigger notifications on change.</description>
    <label>Last Modified Date for Flow</label>
    <type>DateTime</type>
</CustomField>