unpackaged/main/default/objects/Case/fields/Latest_Email_Description__c.field-meta.xml
<CustomField>
    <fullName>Latest_Email_Description__c</fullName>
    <label>Latest Email Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>