unpackaged/main/default/objects/Case/fields/Latest_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Latest_Email_Subject__c</fullName>
    <label>Latest Email Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>