unpackaged/main/default/objects/Case/fields/Latest_Sent_to_Avalara__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sent_to_Avalara__c</fullName>
    <description>Denotes the date time SalesTax pdf file was sent to Avalara via Push Topic</description>
    <label>Latest Sent to Avalara</label>
    <type>DateTime</type>
</CustomField>