unpackaged/main/default/objects/Case/fields/Latest_Sent_to_Esker__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sent_to_Esker__c</fullName>
    <description>Latest Date/Time Email and Attachments were sent to Esker</description>
    <inlineHelpText>Review the History to determine latest person to Sent to Esker</inlineHelpText>
    <label>Latest Sent to Esker</label>
    <type>DateTime</type>
</CustomField>